Fix label alignment in login form

--- a/app/assets/stylesheets/screen/patients.css.scss
+++ b/app/assets/stylesheets/screen/patients.css.scss
@@ -37,3 +37,12 @@ td {
   min-width: 10px;
   padding-right: 10px;
 }
+
+div label.login {
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 47px;
+    text-align: left;
+    padding-right: 5px;
+}
